--- a/public/assets/css/help.css
+++ b/public/assets/css/help.css
@@ -54,6 +54,21 @@ p {
     );
 }
 
+.tinted {
+  opacity: 0.8;
+}
+
+.darc {
+  background: rgba(0, 0, 0, 0.75);
+  color: white;
+  
+}
+
+.overlay{
+  background: black;
+  opacity: 0.2
+ }
+
 .white-font{
   color: #fff;
 }
@@ -65,3 +80,8 @@ p {
 .put-bot{
   text-align:
 }
+
+.wh-normal{
+      width: 100%;
+      height: 100%;
+  }
