--- a/views/help.ejs
+++ b/views/help.ejs
@@ -5,7 +5,6 @@
     <% include partials/head %>
     <% include partials/header %>
   	<link rel="stylesheet" type="text/css" href="<%= assetpath %>assets/css/help.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta name="helpPage" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -84,24 +83,24 @@
     </ol>
 
     <div class="carousel-inner">
-      <div class="item active">
-        <img class="darken" src="<%= assetpath %>assets/images/chalmers.png" alt="Chalmers" style="width:100%;">
+      <div class="carousel-item active">
+        <img class="darken" src="<%= assetpath %>assets/images/chalmers.png" alt="Chalmers" style="width:250px; height:250px;">
         <div class="carousel-caption">
           <h3 class="white-font small-font">Chalmers </h3>
           <p class="white-font small-font">This is the school we go to!</p>
         </div>
       </div>
 
-      <div class="item">
-        <img class="darken" src="<%= assetpath %>assets/images/bootstrap.png" alt="Bootstrap" style="width:100%;">
+      <div class="carousel-item">
+        <img class="darken" src="<%= assetpath %>assets/images/bootstrap.png" alt="Bootstrap" style="width:250px; height:250px;">
         <div class="carousel-caption">
-          <h3 class="white-font small-font">Bootstrap</h3>
-          <p class="white-font small-font">This project uses a ton of things from here!</p>
+          <h3 class="rounded darc white-font small-font">Bootstrap</h3>
+          <p class="rounded darc white-font small-font">This project uses a ton of things from here!</p>
         </div>
       </div>
 
-      <div class="item">
-        <img class="darken" src="<%= assetpath %>assets/images/Octocat.png" alt="Github" style="width:100%;">
+      <div class="carousel-item">
+        <img class="darken" src="<%= assetpath %>assets/images/Octocat.png" alt="Github" style="width:250px; height:250px;">
         <div class="carousel-caption">
           <h3 class="white-font small-font">GitHub</h3>
           <p class="white-font small-font">Merge conflicts are so fun!</p>
@@ -109,12 +108,12 @@
       </div>
     </div>
 
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
+    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
+    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
