--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -13,31 +13,33 @@
 <body>
 	<% include partials/header %>
 
-  <form id="newPostForm" action="javascript:void(0);">
-    <div class="form-group">
-        <label class="ex1 control-label">Title</label>
-        <input
-              name="title"
-              type="text"
-              required="true"
-              placeholder="Name..."
-              class="ex1 form-control">
-    </div>
+	<div class="container">
+		<form id="newPostForm" action="javascript:void(0);">
+	    <div class="form-group">
+	        <label class="ex1 control-label">Title</label>
+	        <input
+	              name="title"
+	              type="text"
+	              required="true"
+	              placeholder="Name..."
+	              class="ex1 form-control">
+	    </div>
 
-    <div class="form-group">
-      <label class="ex1 control-label">Text</label>
-      <textarea class="ex1 form-control"
-                name="text"
-                rows="3"
-                placeholder="E.g. My first forum thread"
-								required
-                ></textarea>
-    </div>
+	    <div class="form-group">
+	      <label class="ex1 control-label">Text</label>
+	      <textarea class="ex1 form-control"
+	                name="text"
+	                rows="3"
+	                placeholder="E.g. My first forum thread"
+									required
+	                ></textarea>
+	    </div>
 
-    <button class="ex1 btn btn-success" onclick="postForm('#newPostForm', '/post/new', '/')">Start thread</button>
-		<a href="/" class="btn btn-light" >Cancel</a>
-  </form>
+	    <button class="ex1 btn btn-success" onclick="postForm('#newPostForm', '/post/new', '/')">Start thread</button>
+			<a href="/" class="btn btn-light" >Cancel</a>
+	  </form>
+	</div>
+	<% include partials/footer %>
 
 </body>
-<% include partials/footer %>
 </html>
