--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,9 +12,6 @@
   <!-- Bootstrap core CSS -->
   <link href="<%= assetpath %>assets/css/bootstrap.min.css" rel="stylesheet" />
 
-  <!-- Fonts -->
-  <link href="<%= assetpath %>assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-
 	<!-- Core Bootstrap -->
 	<script src="<%= assetpath %>assets/js/bootstrap.min.js" type="text/javascript"></script>
 
@@ -47,28 +44,30 @@
 	</style>
 </head>
 <body>
-	<h1 class="center3">Register New User</h1>
-  <form id="registerForm" action="javascript:void(0);">
-    <div class="center form-group">
-        <input
-              type="name"
-              name="name"
-              required="true"
-              placeholder="Name.."
-              class="form-control">
-    </div>
-    <div class="center form-group">
-        <input
-              type="password"
-              name="password"
-              required="true"
-              placeholder="Password.."
-              class="form-control">
-    </div>
-	<div class="center3">
-    <button class="ml-4 mr-4 center3 btn btn-outline-primary" onclick="postForm('#registerForm', '/register', '/login')">Register</button>
-		<a href="/login" class="btn btn-light" >Cancel</a>
+	<div class="container">
+		<h1 class="center3">Register New User</h1>
+	  <form id="registerForm" action="javascript:void(0);">
+	    <div class="center form-group">
+	        <input
+	              type="name"
+	              name="name"
+	              required="true"
+	              placeholder="Name.."
+	              class="form-control">
+	    </div>
+	    <div class="center form-group">
+	        <input
+	              type="password"
+	              name="password"
+	              required="true"
+	              placeholder="Password.."
+	              class="form-control">
+	    </div>
+		<div class="center3">
+	    <button class="ml-4 mr-4 center3 btn btn-outline-primary" onclick="postForm('#registerForm', '/register', '/login')">Register</button>
+			<a href="/login" class="btn btn-light" >Cancel</a>
+		</div>
+	  </form>
 	</div>
-  </form>
 </body>
 </html>
